--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
-minecraft_version=1.7.10
-forge_version=10.13.2.1291
-mod_version=0.5
+minecraft_version=1.9.4
+forge_version=12.17.0.1910-1.9.4
+mod_version=0.6
 buildNum=0
-droneAlter=21
+droneAlter=24
